--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "E-commerce app created with extra AI",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack serve --mode development",
-    "build": "webpack --mode production",
+    "build": "vite build",
+    "dev": "vite serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,21 +25,13 @@
     "appwrite": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "vite": "^4.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/preset-react": "^7.22.15",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
+    "@vitejs/plugin-react": "^4.0.4",
     "sass": "^1.68.0",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "vite-plugin-html": "^3.2.0"
   }
 }
