--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@mui/styles": "^5.14.10",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.6",
     "appwrite": "^13.0.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
