--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-  "presets": [
-    ["@babel/preset-env", { "targets": "last 2 versions" }],
-    ["@babel/preset-react", { "runtime": "automatic" }]
-  ]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["babel-plugin-transform-vite-meta-env"]
 }
