--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --clearCache | jest",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -38,7 +39,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@vitejs/plugin-react": "^4.0.4",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.68.0",
     "vite-plugin-html": "^3.2.0"
   }
